nav corrected, alignment shifted

--- a/project01/v4/style17.css
+++ b/project01/v4/style17.css
@@ -1,72 +1,81 @@
-
- * {
-      letter-spacing: 7px;
- }
-
-.h1 {font-family: 'Amatic SC', cursive;
-     font font-size: 120px;
+.h1 {font-family: 'Amatic SC';
+     font-size: 200px;
 }
 
 body {
-      padding: 50px 30 30px 50;
-      text-align: center; 
+      padding: 50px 30 30px 50; 
+      letter-spacing: 7px;
       margin: 70px 30px 30px 50px;
-      font-family: 'Amatic SC', cursive;  
+      font-family: 'Amatic SC';  
       line-height: 200%;   
 
 }
 
 .p1 {
       font size: 80;
-      text-align: center;
+      letter-spacing: 7px;
+      text-align: left;
       margin: 0 auto;
-      font-family: 'Amatic SC', cursive; 
+      font-family: 'Amatic SC'; 
+      line-height: 200%;   
       
   }
 
  .p2 {
       font size: 90;
-      text-align: center;
+      letter-spacing: 7px;
+      text-align: left;
       margin: 0 auto; 
-      font-family: 'Amatic SC', cursive; 
+      font-family: 'Amatic SC'; 
+      line-height: 200%;   
  }
 
 
  .p3 {
       font size: 100;
-      text-align: center;
+      letter-spacing: 7px;
+      text-align: left;
       margin: 0 auto;
-      font-family: 'Amatic SC', cursive; 
+      font-family: 'Amatic SC'; 
+      line-height: 200%;   
       
  }
 
  .p4 {
       font size: 110;
-      text-align: center;
+      letter-spacing: 7px;
+      text-align: left;
       margin: 0 auto;
-      font-family: 'Amatic SC', cursive; 
+      font-family: 'Amatic SC'; 
+      line-height: 200%;   
       
   }
 
 
  .p5 {
       font size: 120;
-      text-align: center;
+      letter-spacing: 7px;
+      text-align: left;
       margin: 0 auto;
-      font-family: 'Amatic SC', cursive; 
+      font-family: 'Amatic SC'; 
+      line-height: 200%;   
   }
 
  .p6{
       font size: 130;
-      text-align: center;
+      letter-spacing: 7px;
+      text-align: left;
       margin: 0 auto;
-      font-family: 'Amatic SC', cursive; 
+      font-family: 'Amatic SC'; 
+      line-height: 200%;   
  }
 
 
  .p7 {
       font size: 140;
-      text-align: center;
-      font-family: 'Amatic SC', cursive; 
+      letter-spacing: 7px;
+      text-align: left;
+      font-family: 'Amatic SC'; 
+      line-height: 200%;   
  }
 
